--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,7 +1,7 @@
 FROM node:18.15-alpine3.17 AS build
 WORKDIR /app
 
-COPY . .
+COPY ./humblibc .
 RUN npm install
 RUN npm run build
 FROM nginx:alpine
