--- a/humblib/nginx.conf
+++ b/humblib/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen       8080;
-    server_name  humblib-front-production.up.railway.app;
+    server_name  localhost;
 
     location / {
         root   /usr/share/nginx/html;
