--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -5,5 +5,5 @@ COPY ./humblib .
 RUN npm install
 RUN npm run build
 FROM nginx:alpine
-COPY ./humblib/nginx/conf /etc/nginx/nginx.conf
+COPY ./humblib/nginx.conf /etc/nginx/nginx.conf
 COPY --from=build /app/dist/humblib/ /usr/share/nginx/html 
