--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -7,3 +7,4 @@ RUN npm run build
 FROM nginx:alpine
 COPY ./humblib/nginx.conf /etc/nginx/nginx.conf
 COPY --from=build /app/dist/humblib/ /usr/share/nginx/html 
+EXPOSE 8080
