--- a/humblib/nginx.conf
+++ b/humblib/nginx.conf
@@ -1,4 +1,8 @@
 http {
+
+    server {
+
+   
     listen       8080;
     server_name  0.0.0.0;
 
@@ -12,5 +16,6 @@ http {
     location = /50x.html {
         root   /usr/share/nginx/html;
     }
-
+ }
 }
+events{}
