--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,10 +1,9 @@
-FROM node:18.15-alpine3.17 AS build
+FROM node:16-alpine AS build
 WORKDIR /app
 
 COPY ./humblib .
 RUN npm install
 RUN npm run build
 FROM nginx:alpine
-COPY ./humblib/nginx.conf /etc/nginx/nginx.conf
-COPY --from=build /app/dist/humblib/ /usr/share/nginx/html 
-
+COPY --from=build /app/dist/humblib/ /usr/share/nginx/html
+EXPOSE 80
