--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -5,5 +5,5 @@ COPY ./humblib .
 RUN npm install
 RUN npm run build
 FROM nginx:alpine
-COPY --from=build /app/dist/humblib/ /usr/share/nginx/html
-EXPOSE 80
+COPY ./humblib/nginx.conf /etc/nginx
+EXPOSE 8080
