--- a/humblib/nginx.conf
+++ b/humblib/nginx.conf
@@ -1,20 +1,13 @@
 http {
-
-    server {
-
-   
-    listen       8080;
-
-    location / {
-        root   /usr/share/nginx/html;
-        try_files $uri $uri/ /index.html;
-        index  index.html index.htm;
+    types {
+        text/css    css;
+        text/html   html;
+        text/javascript     js;
     }
-
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
+    server{
+        listen 8080;
+        root /app/dist/humblib;
     }
- }
 }
-events{}
+
+events {}
