--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -5,5 +5,7 @@ COPY ./humblib .
 RUN npm install
 RUN npm run build
 FROM nginx:alpine
+COPY ./humblib/dist/humblib /usr/share/nginx/html
+COPY ./humblib/node_modules /use/share/nginx/html/node_modules
 COPY ./humblib/nginx.conf /etc/nginx
 EXPOSE 8080
