--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,11 +1,9 @@
-FROM node:16-alpine
+FROM node:19-alpine3.16
 WORKDIR /app
 
 COPY ./humblib .
 RUN npm install
 RUN npm run build
-FROM nginx:alpine
-COPY ./humblib/dist/humblib /usr/share/nginx/html
-COPY ./humblib/node_modules /use/share/nginx/html/node_modules
+FROM nginx:latest
 COPY ./humblib/nginx.conf /etc/nginx
 EXPOSE 8080
